--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+#package-lock.json
+.package-lock.json
+package-lock.json
+.yarn.lock
+.README.node_modules
+.prettierrc
