--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
     "nodemon": "^1.18.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
@@ -47,6 +45,8 @@
   ],
   "devDependencies": {
     "husky": "^1.1.4",
-    "lint-staged": "^8.0.4"
+    "lint-staged": "^8.0.4",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0"
   }
 }
