--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,9 +46,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "husky": "^1.1.4",
-    "lint-staged": "^8.0.4",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0"
+    "eslint-config-prettier": "^3.3.0",
+    "husky": "^1.1.4",
+    "lint-staged": "^8.0.4"
   }
 }
