--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "nodemon": "^1.18.6",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -25,6 +27,7 @@
     ]
   },
   "eslintConfig": {
+    "parser": "babel-eslint",
     "extends": [
       "airbnb",
       "prettier"
@@ -45,9 +48,9 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "husky": "^1.1.4",
-    "lint-staged": "^8.0.4",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0"
+    "eslint-config-prettier": "^3.3.0",
+    "husky": "^1.1.4",
+    "lint-staged": "^8.0.4"
   }
 }
