--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
     "nodemon": "^1.18.6",
     "prop-types": "^15.6.2",
+    "randomcolor": "^0.5.3",
     "react": "^16.6.3",
+    "react-chartjs-2": "^2.7.4",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,20 +30,6 @@
       "git add"
     ]
   },
-  "eslintConfig": {
-    "extends": [
-      "airbnb",
-      "prettier"
-    ],
-    "env": {
-      "browser": true
-    },
-    "rules": {
-      "react/prefer-stateless-function": 0,
-      "react/jsx-filename-extension": 0,
-      "react/jsx-one-expression-per-line": 0
-    }
-  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -45,9 +37,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "husky": "^1.1.4",
-    "lint-staged": "^8.0.4",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0"
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "husky": "^1.1.4",
+    "lint-staged": "^8.0.4"
   }
 }
