--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
-    "formik": "^1.3.2",
-    "nodemon": "^1.18.6",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
     "react": "^16.6.3",
@@ -16,11 +14,11 @@
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.1",
+    "react-spinners": "^0.4.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.83.0",
-    "yup": "^0.26.6"
+    "semantic-ui-react": "^0.83.0"
   },
   "scripts": {
     "start": "react-scripts start",
