--- a/package.json
+++ b/package.json
@@ -24,14 +24,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
