--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.1.5",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
+    "ms": "^2.1.1",
     "nodemon": "^1.18.6",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
@@ -16,20 +18,14 @@
     "react-scripts": "2.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "semantic-ui": "^2.4.2"
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.83.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
+    "eject": "react-scripts eject"
   },
   "browserslist": [
     ">0.2%",
