--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/runtime": "^7.1.5",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
+    "connected-react-router": "^5.0.1",
+    "history": "^4.7.2",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.3",
     "react": "^16.6.3",
