--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.1.5",
+    "aws-cli-js": "^2.0.4",
+    "aws-sdk": "^2.361.0",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
     "prop-types": "^15.6.2",
@@ -16,6 +18,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-social-login-buttons": "^2.3.0",
     "react-spinners": "^0.4.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
