--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "aws-sdk": "^2.361.0",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
-    "node-sass": "^4.10.0",
     "connected-react-router": "^5.0.1",
     "history": "^4.7.2",
+    "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
+    "query-string": "^6.2.0",
     "randomcolor": "^0.5.3",
     "react": "^16.6.3",
     "react-chartjs-2": "^2.7.4",
