--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.1.5",
-    "aws-cli-js": "^2.0.4",
-    "aws-sdk": "^2.361.0",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
     "connected-react-router": "^5.0.1",
     "history": "^4.7.2",
-    "node-sass": "^4.10.0",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
-    "randomcolor": "^0.5.3",
     "react": "^16.6.3",
     "react-chartjs-2": "^2.7.4",
     "react-circular-progressbar": "^1.0.0",
@@ -23,7 +20,6 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-social-login-buttons": "^2.3.0",
-    "react-spinners": "^0.4.7",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
