--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
-    "react-social-login-buttons": "^2.3.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.83.0"
+    "semantic-ui-react": "^0.83.0",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
