--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "connected-react-router": "^5.0.1",
     "history": "^4.7.2",
     "lodash": "^4.17.11",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.6.2",
     "query-string": "^6.2.0",
     "react": "^16.6.3",
